--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,8 +24,8 @@
     ],
     "baseUrl": "src",
     "paths": {
-      "@components": ["app/components/index"],      
-      "@components/*": ["app/components/*"],
+      "@/components": ["app/components/index"],      
+      "@/components/*": ["app/components/*"],
     }
   },
   "include": [
