--- a/clement/ui/package.json
+++ b/clement/ui/package.json
@@ -10,11 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/ui": "^3.2.0",
     "nuxt": "^3.17.5",
     "vue": "^3.5.16",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@iconify-json/lucide": "^1.2.53",
     "@nuxtjs/tailwindcss": "^7.0.0-beta.0"
   }
 }
